--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "theme-changer",
+  "name": "vscode-theme-changer",
   "displayName": "Theme changer",
   "publisher": "djogy",
-  "description": "Switcher of color theme and font size.",
+  "description": "Switcher of your favorite color theme and font size.",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.77.0"
